feat: Add PRs and Job Summaries (#64)
* chore: Improve Unit Tests

* ci: Update settings file for test repo

* ci: Fix integration testing action

* fix: Errors found with new unit tests

* Update environments.py

* fix: Fix markdown for job summary

* fix: Issues with Unit Tests

* fix: Add default color (white) when new label does not have color provided

* fix: Bugs found in enhancing of unit tests

* chore: Linting

* fix: Nullable entry in bp protection

* fix: Allow color to be null

* chore: Linting

* chore: Linting

* ci: Remove unnecessary tests

* chore: Linting

* fix: Add error handler where BP disabled due to public (free) account

* fix: Outstanding issues with unit tests

* fix: Markdown generation

* chore: Linting

* chore: Linting

* chore: Linting

* chore: Linting

* fix: Unit test issue for new method

* chore: Linting

* fix: Unit tests

* fix: Unit Tests

* fix: Unit tests

* fix: Integration test

* fix: Integration test

* fix: Markdown issue for files

* fix: Files markdown

* fix: Unit tests

* fix: Stray keystorke

* fix: Unit tests

* fix: Delete local repo after running

* fix: Skip files on clear

* fix: Markdown generation

* fix: Integration Tests

* chore: Linting

* chore; Linting

* fix: Bypass error if an unclosed PR branch from prior run is still sitting out there

* fix: Always write a job summary

* chore: Linting

* chore: Linting

* fix: Error introduced to environment when we changed update to a tupe

* fix: Integration test settings

--- a/.github/workflows/action-integration.yml
+++ b/.github/workflows/action-integration.yml
@@ -19,7 +19,20 @@ on:
       - '**/*.py'
 
 jobs:
+
   action-integration-testing:
+    strategy:
+      matrix:
+        include:
+        - repo: self
+          action: check
+          settings_file: '[".github/settings.yml"]'
+          fail_on_diff: true
+        - repo: actuarysailor/test
+          action: test
+          settings_file: '["examples/settings.yml","examples/settings-clear.yml"]'
+          fail_on_diff: false
+
     name: Action Integration Testing
     runs-on: ubuntu-latest
     steps:
@@ -40,16 +53,53 @@ jobs:
       - name: cat action.yml
         run: cat action.yml
 
-      - name: Test action
-        id: test-action
-        # test with the local checkout of the action
+      - name: Checking ${{ matrix.repo }} against ${{ fromJSON(matrix.settings_file)[0] }}
+        id: test-check-action
+        if: contains(fromJSON('["check","test"]'), matrix.action)
         uses: ./
         with:
           token: ${{ secrets.THIS_PAT || github.token }}
-          action: "check"
+          repo: ${{ matrix.repo }}
+          settings_file: ${{ fromJSON(matrix.settings_file)[0] }}
+          action: check
+          fail_on_diff: ${{ matrix.fail_on_diff }}
         env:
           SOME_SECRET: ${{ secrets.SOME_SECRET }}
 
+      - name: Applying ${{ fromJSON(matrix.settings_file)[0] }} to ${{ matrix.repo }}
+        id: test-apply-action
+        if: matrix.action == 'test'
+        uses: ./
+        with:
+          token: ${{ secrets.THIS_PAT || github.token }}
+          repo: ${{ matrix.repo }}
+          settings_file: ${{ fromJSON(matrix.settings_file)[0] }}
+          action: apply
+        env:
+          SOME_SECRET: ${{ secrets.SOME_SECRET }}
+
+      - name: Applying ${{ fromJSON(matrix.settings_file)[1] }} to ${{ matrix.repo }}
+        id: undo-apply-action
+        if: matrix.action == 'test'
+        uses: ./
+        with:
+          token: ${{ secrets.THIS_PAT || github.token }}
+          repo: ${{ matrix.repo }}
+          settings_file: ${{ fromJSON(matrix.settings_file)[1] }}
+          action: apply
+
+      - name: Checking ${{ matrix.repo }} against ${{ fromJSON(matrix.settings_file)[0] }}
+        id: final-check-action
+        if: matrix.action == 'test'
+        uses: ./
+        with:
+          token: ${{ secrets.THIS_PAT || github.token }}
+          repo: ${{ matrix.repo }}
+          settings_file: ${{ fromJSON(matrix.settings_file)[1] }}
+          action: check
+          fail_on_diff: true
+
       - name: Check outputs
         run: |
-          test "${{ steps.test-action.outputs.result }}" == "Check passed"
+          test "${{ steps.test-check-action.outputs.result }}" == "Check passed"
+          test "${{ steps.final-check-action.outputs.result || 'Check passed' }}" == "Check passed"
