--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -10,6 +10,7 @@ on:
       - '.pre-commit-config.yaml'
       - 'package-requirements.txt'
       - 'pyproject.toml'
+      - poetry.lock
       - '**/*.py'
       - '**/*.md'
   pull_request:
@@ -19,6 +20,7 @@ on:
       - '.pre-commit-config.yaml'
       - 'package-requirements.txt'
       - 'pyproject.toml'
+      - poetry.lock
       - '**/*.py'
       - '**/*.md'
 
