feat: Update action to be able to use GitHub Apps

--- a/action.yml
+++ b/action.yml
@@ -15,8 +15,14 @@ inputs:
     description: Set a custom github server url for github api operations. Useful if you're running on GHE. Will try to autodiscover from env.GITHUB_SERVER_URL if left at default
     default: "none"
   token:
-    description: What github token to use with this action.
-    required: true
+    description: What github token to use with this action (one of token or app_id is required).
+    required: False
+  app_id:
+    description: What github app id to use with this action (one of token or app_id is required).
+    required: False
+  private_key:
+    description: What github app private key to use with this action (required if using an app_id to authenticate).
+    required: False
   fail_on_diff:
     description: Fail the action if the repo settings differ from the settings file. Default is false. Note, this only applies if the action is set to 'check'
     default: False
