--- a/action.yml
+++ b/action.yml
@@ -13,7 +13,6 @@ inputs:
     default: "self"
   github_server_url:
     description: Set a custom github server url for github api operations. Useful if you're running on GHE. Will try to autodiscover from env.GITHUB_SERVER_URL if left at default
-    default: "none"
   token:
     description: What github token to use with this action (one of token or app_id is required).
     required: False
@@ -22,6 +21,7 @@ inputs:
     required: False
   private_key:
     description: What github app private key to use with this action (required if using an app_id to authenticate).
+    multiline: true
     required: False
   fail_on_diff:
     description: Fail the action if the repo settings differ from the settings file. Default is false. Note, this only applies if the action is set to 'check'
