--- a/.github/workflows/release-docker-images.yml
+++ b/.github/workflows/release-docker-images.yml
@@ -21,8 +21,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.6
-        with:
-          token: ${{ secrets.THIS_PAT }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3.0.0
@@ -41,7 +39,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.THIS_PAT }}
+          password: ${{ github.token }}  #${{ secrets.THIS_PAT }}
 
       - name: Docker metadata
         uses: docker/metadata-action@v5.5.1
@@ -70,4 +68,4 @@ jobs:
           # https://github.com/docker/build-push-action/blob/master/docs/advanced/cache.md#registry-cache
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          github-token: ${{ secrets.THIS_PAT }}
+          github-token: ${{ github.token }}  #${{ secrets.THIS_PAT }}
