--- a/.github/workflows/release-major-version-tag.yml
+++ b/.github/workflows/release-major-version-tag.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
       - uses: nowactions/update-majorver@v1.1.2
         with:
-          github_token: ${{ secrets.THIS_PAT }}
+          github_token: ${{ github.token }}  #${{ secrets.THIS_PAT }}
