--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -11,5 +11,5 @@ jobs:
     steps:
       - uses: googleapis/release-please-action@v4.1.1
         with:
-          token: ${{ secrets.THIS_PAT }}
+          token: ${{ github.token }}  #${{ secrets.THIS_PAT }}
           manifest-file: .github/.release-please-manifest.json
