--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,9 +21,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.6
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.THIS_PAT }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3.0.0
@@ -63,7 +60,7 @@ jobs:
           # https://github.com/docker/build-push-action/blob/master/docs/advanced/cache.md#registry-cache
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          github-token: ${{ secrets.THIS_PAT }}
+          github-token: ${{ github.token }}  #${{ secrets.THIS_PAT }}
 
       - name: Update Action Dockerfile with Jinja
         id: update_action-dockerfile
@@ -89,8 +86,6 @@ jobs:
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1.1.4
-        env:
-          GITHUB_TOKEN: ${{ secrets.THIS_PAT }}
         with:
           tag_name: ${{ inputs.version }}
           release_name: ${{ inputs.version }}
