--- a/.github/workflows/release-docker-images.yml
+++ b/.github/workflows/release-docker-images.yml
@@ -3,7 +3,7 @@
 name: Release Docker Images
 on:
   release:
-    types: [released]
+    types: [released,published]
   push:
     branches:
       - main
