--- a/.github/workflows/make-docker-image.yml
+++ b/.github/workflows/make-docker-image.yml
@@ -38,6 +38,7 @@ jobs:
         with:
           images: |
             ${{ github.repository }}
+            ghcr.io/${{ github.repository }}
           tags: |
             type=raw,value=${{ inputs.version }}
             # minimal (short sha)
@@ -58,5 +59,5 @@ jobs:
           # https://github.com/docker/build-push-action/blob/master/docs/advanced/cache.md#registry-cache
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          github-token: ${{ github.token }}  #${{ secrets.THIS_PAT }}
+          github-token: ${{ github.token }}
 
